--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,83 @@
 node_modules/
 package-lock.json
+*.pyc
+*/__pycache__
+*/migrations
+__pycache__/
+migrations/
+
+# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+
+# C extensions
+*.so
+
+# Distribution / packaging
+bin/
+build/
+develop-eggs/
+dist/
+eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Unit test / coverage reports
+.tox/
+.coverage
+.cache
+.pytest_cache
+nosetests.xml
+coverage.xml
+
+# Translations
+*.mo
+
+# Mr Developer
+.mr.developer.cfg
+.project
+.pydevproject
+
+# Rope
+.ropeproject
+
+# Django stuff:
+*.log
+*.pot
+
+# Sphinx documentation
+docs/_build/
+
+db.sqlite3
+*.sqlite3-journal
+static_cdn/
+static_cdn/*
+static_cdn
+site/
+*.xml
+staticfiles/
+work/
+media/
+*.deb
+logs/
+media_cdn/
+media_cdn/*
+media_cdn
+*/__pycache__/*
+__pycache__
+*/*/__pycache__/
+.vscode/
+**/.idea
+.idea/misc.xml
+idea/mokrin_online.iml
+.idea/workspace.xml
