Added settings for dev and prod env

--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -11,9 +11,15 @@ ADD requirements.txt /webshop
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r /webshop/requirements.txt
 
-COPY . /webshop
-ADD . /webshop
+COPY ./webshop/ /webshop/
+ADD ./webshop/ /webshop/
 WORKDIR /webshop/
 
 EXPOSE 8000
+RUN python manage.py makemigrations
+RUN python manage.py migrate
+RUN python manage.py collectstatic --noinput
+# #RUN python manage.py runserver 127.0.0.1:8000
+RUN python manage.py runserver --settings=webshop.settings.dev 127.0.0.1:8000
+RUN echo $PWD
 
