Dodate konfiguracije za settings i docker - backend

--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -7,6 +7,7 @@ RUN apt update && apt upgrade -fy
 
 RUN mkdir /webshop
 ADD requirements.txt /webshop
+COPY entrypoint.sh /webshop
 
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r /webshop/requirements.txt
@@ -16,10 +17,4 @@ ADD ./webshop/ /webshop/
 WORKDIR /webshop/
 
 EXPOSE 8000
-RUN python manage.py makemigrations
-RUN python manage.py migrate
-RUN python manage.py collectstatic --noinput
-# #RUN python manage.py runserver 127.0.0.1:8000
-RUN python manage.py runserver --settings=webshop.settings.dev 127.0.0.1:8000
-RUN echo $PWD
-
+ENTRYPOINT [ "/webshop/entrypoint.sh" ]
