Dodat initial_data.json

--- a/src/backend/Dockerfile
+++ b/src/backend/Dockerfile
@@ -8,6 +8,7 @@ RUN apt update && apt upgrade -fy
 RUN mkdir /webshop
 ADD requirements.txt /webshop
 COPY entrypoint.sh /webshop
+COPY initial_data.json /webshop
 
 RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r /webshop/requirements.txt
